GPG test and upload actual project state